--- a/TestExcel/Views/TimeSchedule/DSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/DSchedule.cshtml
@@ -472,7 +472,7 @@
                                 <td id="@tid" colspan="@TIME" class="droppable revert" width="60px">
                                     @if (WhereTimeDate.First().SUBJECT_CREDIT.Contains("-0-"))
                                     {
-                                        <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                        <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                             <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                             <p>
                                                 @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -491,7 +491,7 @@
                                     }
                                     else
                                     {
-                                        <div class="getdata" style="background-color:@color;width:100%;height:50px">
+                                        <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                             @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                             <p>
                                                 @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -529,7 +529,7 @@
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         @if (first.SUBJECT_CREDIT.Contains("-0-"))
                                         {
-                                            <div class="draggable getdata" style="background-color:@color;height:50px">
+                                            <div class="draggable getdata" style="background-color:@color;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
                                                     @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
@@ -558,7 +558,7 @@
                                         }
                                         else
                                         {
-                                            <div class="getdata" style="background-color:@color;height:50px">
+                                            <div class="getdata" style="background-color:@color;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
                                                     @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
@@ -595,7 +595,7 @@
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         @if (WhereTimeDate.First().SUBJECT_CREDIT.Contains("-0-"))
                                         {
-                                            <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                            <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
                                                     @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -614,7 +614,7 @@
                                         }
                                         else
                                         {
-                                            <div class="getdata" style="background-color:@color;width:100%;height:50px">
+                                            <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
                                                     @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
