--- a/TestExcel/Views/TimeSchedule/PSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/PSchedule.cshtml
@@ -463,7 +463,7 @@
                                 <td id="@tid" colspan="@TIME" class="droppable revert" width="60px">
                                     @if (WhereTimeDate.First().SUBJECT_CREDIT.Contains("-0-"))
                                     {
-                                        <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                        <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                             <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                             <p>
                                                 @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -482,7 +482,7 @@
                                     }
                                     else
                                     {
-                                        <div class="getdata" style="background-color:@color;width:100%;height:50px">
+                                        <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                             @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                             <p>
                                                 @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -520,7 +520,7 @@
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         @if (first.SUBJECT_CREDIT.Contains("-0-"))
                                         {
-                                            <div class="draggable getdata" style="background-color:@color;height:50px">
+                                            <div class="draggable getdata" style="background-color:@color;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
                                                     @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
@@ -549,7 +549,7 @@
                                         }
                                         else
                                         {
-                                            <div class="getdata" style="background-color:@color;height:50px">
+                                            <div class="getdata" style="background-color:@color;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
                                                     @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
@@ -586,7 +586,7 @@
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         @if (WhereTimeDate.First().SUBJECT_CREDIT.Contains("-0-"))
                                         {
-                                            <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                            <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
                                                     @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -605,7 +605,7 @@
                                         }
                                         else
                                         {
-                                            <div class="getdata" style="background-color:@color;width:100%;height:50px">
+                                            <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
                                                     @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
