--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -461,7 +461,7 @@
                                 <td id="@tid" colspan="@TIME" class="droppable revert" width="60px">
                                     @if (WhereTimeDate.First().SUBJECT_CREDIT.Contains("-0-"))
                                     {
-                                        <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                        <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                             <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                             <p>
                                                 @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -480,7 +480,7 @@
                                     }
                                     else
                                     {
-                                        <div class="getdata" style="background-color:@color;width:100%;height:50px">
+                                        <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                             @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                             <p>
                                                 @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -518,7 +518,7 @@
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         @if (first.SUBJECT_CREDIT.Contains("-0-"))
                                         {
-                                            <div class="draggable getdata" style="background-color:@color;height:50px">
+                                            <div class="draggable getdata" style="background-color:@color;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
                                                     @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
@@ -547,7 +547,7 @@
                                         }
                                         else
                                         {
-                                            <div class="getdata" style="background-color:@color;height:50px">
+                                            <div class="getdata" style="background-color:@color;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
                                                     @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
@@ -584,7 +584,7 @@
                                     <td id="@tid" colspan="@TIME" width="60px" class="droppable">
                                         @if (WhereTimeDate.First().SUBJECT_CREDIT.Contains("-0-"))
                                         {
-                                            <div class="draggable getdata" style="background-color:@color;width:100%;height:50px">
+                                            <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
                                                     @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
@@ -603,7 +603,7 @@
                                         }
                                         else
                                         {
-                                            <div class="getdata" style="background-color:@color;width:100%;height:50px">
+                                            <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
                                                     @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
