--- a/TestExcel/Views/TimeSchedule/DSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/DSchedule.cshtml
@@ -475,7 +475,7 @@
                                         <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                             <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                             <p>
-                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                             </p>
                                             @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                             @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
@@ -494,7 +494,7 @@
                                         <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                             @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                             <p>
-                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                             </p>
                                             @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                             @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
@@ -532,7 +532,7 @@
                                             <div class="draggable getdata" style="background-color:@color;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
-                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
+                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER / @first.SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", first.SECTION_ID)
                                                 @Html.Hidden("First_id_" + first.SECTION_ID, first.SECTION_ID)
@@ -561,7 +561,7 @@
                                             <div class="getdata" style="background-color:@color;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
-                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
+                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER / @first.SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", first.SECTION_ID)
                                                 @Html.Hidden("First_id_" + first.SECTION_ID, first.SECTION_ID)
@@ -598,7 +598,7 @@
                                             <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
-                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                                 @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
@@ -617,7 +617,7 @@
                                             <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
-                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                                 @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
