--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -464,7 +464,7 @@
                                         <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                             <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                             <p>
-                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                             </p>
                                             @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                             @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
@@ -483,7 +483,7 @@
                                         <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                             @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                             <p>
-                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                             </p>
                                             @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                             @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
@@ -521,7 +521,7 @@
                                             <div class="draggable getdata" style="background-color:@color;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
-                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
+                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER / @first.SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", first.SECTION_ID)
                                                 @Html.Hidden("First_id_" + first.SECTION_ID, first.SECTION_ID)
@@ -550,7 +550,7 @@
                                             <div class="getdata" style="background-color:@color;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
-                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER
+                                                    @first.SUBJECT_ID @first.SUBJECT_NAME ตอน @first.SECTION_NUMBER / @first.SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", first.SECTION_ID)
                                                 @Html.Hidden("First_id_" + first.SECTION_ID, first.SECTION_ID)
@@ -587,7 +587,7 @@
                                             <div class="draggable getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 <div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>
                                                 <p>
-                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                                 @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
@@ -606,7 +606,7 @@
                                             <div class="getdata" style="background-color:@color;width:100%;min-height:50px">
                                                 @*<div id="x_button" class="btn x_button btn-default pull-right text-center">&times;</div>*@
                                                 <p>
-                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER
+                                                    @WhereTimeDate.First().SUBJECT_ID @WhereTimeDate.First().SUBJECT_NAME ตอน @WhereTimeDate.First().SECTION_NUMBER / @WhereTimeDate.First().SECTION_CLASSROOM
                                                 </p>
                                                 @Html.Hidden("searchId", WhereTimeDate.First().SECTION_ID)
                                                 @Html.Hidden("First_id_" + WhereTimeDate.First().SECTION_ID, WhereTimeDate.First().SECTION_ID)
